log/build_2024-07-11_11-39-30/semnav/stderr.log
/home/neha/ros2_ws/src/semnav_migration/src/navigation_humans.cpp: In member function ‘void NavigationHumansNode::human_update(const object_pose_interface_msgs::msg::KeypointDetections3D_<std::allocator<void> >::ConstPtr&)’:
/home/neha/ros2_ws/src/semnav_migration/src/navigation_humans.cpp:298:60: error: no matching function for call to ‘tf2_ros::Buffer::lookupTransform(std::string&, const tf2::TimePoint&, std::string&, const std_msgs::msg::Header_<std::allocator<void> >::_stamp_type&, std::string&, rclcpp::Duration)’
  298 |                             t = tf_buffer_->lookupTransform(
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
  299 |                                             world_frame_id_, tf2::TimePointZero,
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  300 |                                             camera_optical_frame_id_, human_data->header.stamp,
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  301 |                                             world_frame_id_, rclcpp::Duration(std::chrono::nanoseconds(1000000000)));
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/jazzy/include/tf2_ros/tf2_ros/async_buffer_interface.h:39,
                 from /opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:42,
                 from /home/neha/ros2_ws/src/semnav_migration/include/reactive_planner_lib.h:40,
                 from /home/neha/ros2_ws/src/semnav_migration/src/navigation_humans.cpp:25:
/opt/ros/jazzy/include/tf2/tf2/buffer_core.h:156:3: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2::BufferCore::lookupTransform(const std::string&, const tf2::TimePoint&, const std::string&, const tf2::TimePoint&, const std::string&) const’
  156 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2/tf2/buffer_core.h:156:3: note:   candidate expects 5 arguments, 6 provided
/opt/ros/jazzy/include/tf2/tf2/buffer_core.h:138:3: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2::BufferCore::lookupTransform(const std::string&, const std::string&, const tf2::TimePoint&) const’
  138 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2/tf2/buffer_core.h:138:3: note:   candidate expects 3 arguments, 6 provided
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:127:3: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const std::string&, const std::string&, const tf2::TimePoint&, tf2::Duration) const’
  127 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:127:3: note:   candidate expects 4 arguments, 6 provided
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:137:3: note: candidate: ‘geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const std::string&, const std::string&, const rclcpp::Time&, rclcpp::Duration) const’
  137 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:137:3: note:   candidate expects 4 arguments, 6 provided
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:159:3: note: candidate: ‘virtual geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const std::string&, const tf2::TimePoint&, const std::string&, const tf2::TimePoint&, const std::string&, tf2::Duration) const’
  159 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:161:62: note:   no known conversion for argument 4 from ‘const std_msgs::msg::Header_<std::allocator<void> >::_stamp_type’ {aka ‘const builtin_interfaces::msg::Time_<std::allocator<void> >’} to ‘const tf2::TimePoint&’ {aka ‘const std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >&’}
  161 |     const std::string & source_frame, const tf2::TimePoint & source_time,
      |                                       ~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:171:3: note: candidate: ‘geometry_msgs::msg::TransformStamped tf2_ros::Buffer::lookupTransform(const std::string&, const rclcpp::Time&, const std::string&, const rclcpp::Time&, const std::string&, rclcpp::Duration) const’
  171 |   lookupTransform(
      |   ^~~~~~~~~~~~~~~
/opt/ros/jazzy/include/tf2_ros/tf2_ros/buffer.h:172:60: note:   no known conversion for argument 2 from ‘const tf2::TimePoint’ {aka ‘const std::chrono::time_point<std::chrono::_V2::system_clock, std::chrono::duration<long int, std::ratio<1, 1000000000> > >’} to ‘const rclcpp::Time&’
  172 |     const std::string & target_frame, const rclcpp::Time & target_time,
      |                                       ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
gmake[2]: *** [CMakeFiles/navigation_humans.dir/build.make:76: CMakeFiles/navigation_humans.dir/src/navigation_humans.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:233: CMakeFiles/navigation_humans.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
